--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,10 @@ api_version: 1
 handlers:
 - url: /
   script: plusfeed.py
+
+- url: /favicon\.ico
+  static_files: static/favicon.ico
+  upload: static/favicon\.ico
   
 - url: /.+
   script: plusfeed.py
