--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,10 @@ handlers:
 - url: /favicon\.ico
   static_files: static/favicon.ico
   upload: static/favicon\.ico
-  
+
+- url: /robots\.txt
+  static_files: static/robots.txt
+  upload: static/robots\.txt
+
 - url: /.+
   script: plusfeed.py
